--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a href="#">Download Exursion (Coming Soon!)</a></p>
 
 </body>
