--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Exursion (Coming Soon!)</a></p>
+    <p><a class="link--cta" href="#">Download Exursion (Coming Soon!)</a></p>
 
 </body>
 </html>
