--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <p><a class="link--cta" href="#">Download Exursion (Coming Soon!)</a></p>
 
     <video autoplay loop>
-<source src="resources/videos/excursion.mp4" type="video/mp4">
-
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
     </video>
+    
+<h2 class="header--secondary">Your personal travel guide</h2>
+<h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 </body>
+
 </html>
