--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
         <source src="resources/videos/excursion.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    
-<h2 class="header--secondary">Your personal travel guide</h2>
-<h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+
+    <h2 class="header--secondary">Your personal travel guide</h2>
+    <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around
+        you.</h4>
+    <p><img src="resources/images/camp.jpg"></p>
+    <p><img src="resources/images/phone.png"></p>
+    <h4 class="header--sub-header">Coming Soon for Iphone and Andriod</h4>
+    <p><a class="link--cta" href="#">Download Exursion (Coming Soon!)</a></p>
+
 </body>
 
 </html>
