--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <p><img src="resources/images/phone.png"></p>
     <h4 class="header--sub-header">Coming Soon for Iphone and Andriod</h4>
     <p><a class="link--cta" href="#">Download Exursion (Coming Soon!)</a></p>
+    <p class="footer--copyright">© Excursion</p>
+
 
 </body>
 
